fix(frontend): fix overall endpoint parameter and data for show in frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,7 +56,7 @@
                     </svg>
                 </button>
                 <div class="filter-options" id="filterOptions">
-                    <button class="filter-option" data-filter="general">General</button>
+                    <button class="filter-option" data-filter="All">All</button>
                     <button class="filter-option active" data-filter="Race">Race</button>
                     <button class="filter-option" data-filter="Qualifying">Qualifying</button>
                     <button class="filter-option" data-filter="Practice">Practice</button>
